[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Menu_buttons/music_available_hover.png" type="Texture" id=1]
[ext_resource path="res://Assets/Music/bg_music_level_select.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Menu_buttons/music_available.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu_buttons/music_disable_hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu_buttons/music_disable.png" type="Texture" id=5]
[ext_resource path="res://World/Music/MusicControl.gd" type="Script" id=6]
[ext_resource path="res://Assets/Music/bg_music_level_1.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/Music/bg_music_menu.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Menu_buttons/music_available_hover_50p.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menu_buttons/music_available_50p.png" type="Texture" id=10]

[node name="MusicControl" type="Node2D"]
script = ExtResource( 6 )

[node name="MusicOn" type="TextureButton" parent="."]
margin_right = 48.0
margin_bottom = 18.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicOn50p" type="TextureButton" parent="."]
margin_right = 41.0
margin_bottom = 18.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicOff" type="TextureButton" parent="."]
margin_right = 41.0
margin_bottom = 18.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Level_Select_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Level_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="pressed" from="MusicOn" to="." method="_on_MusicOn_pressed"]
[connection signal="pressed" from="MusicOn50p" to="." method="_on_MusicOn50p_pressed"]
[connection signal="pressed" from="MusicOff" to="." method="_on_MusicOff_pressed"]
